tests/ui/mut/mut-cross-borrowing.stderr
error[E0308]: mismatched types
  --> $DIR/mut-cross-borrowing.rs:7:7
   |
LL |     f(x)
   |     - ^
   |     | |
   |     | expected `&mut isize`, found `Box<{integer}>`
   |     | help: consider mutably borrowing here: `&mut x`
   |     arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut isize`
                         found struct `Box<{integer}>`
note: function defined here
  --> $DIR/mut-cross-borrowing.rs:1:4
   |
LL | fn f(_: &mut isize) {}
   |    ^ -------------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
